# glassyrender

./: .gitignore  .gitmodules  CMakeLists.txt  Constants.h  GlassyRender.rc  README.md  debug.cmd  main.cpp
Entities/: affine_transform.h  i_light_source.h  matrix.h  objects.h  point.h  sphere.h  vec.h  vector_utils.h
Scene3D/: Model.cpp  Model.h  Scene3D.h  model.cpp  model.h  scene3d.h  viewport.h
algorithms/: render.h
cli/: CMakeLists.txt
cli/include/: command.h  command_handler.h
cli/src/: command_handler.cpp
common_lib/: CMakeLists.txt
common_lib/ext/png++-0.2.9/: error.hpp
common_lib/include/: Constants.h  basic_image.h  constants.h  obj_file_handler.h  singleton.h  split.h  tga.h
common_lib/include/math/: affine_transform.h  vec.h
common_lib/src/: obj_file_handler.cpp
filesystem/: CMakeLists.txt
filesystem/ext/png++-0.2.9/: CMakeLists.txt
filesystem/include/: obj_file_handler.h  options_loader.h  png_utils.h  scene_loader.h  tga.h  tga_utils.h
filesystem/src/: obj_file_handler.cpp
include/algorithms/: brdf.h  cook_torrance.h  kernel.h
include/entities/: affine_transform.h  i_light_source.h  matrix.h  point.h  sphere.h  vec.h  vector_utils.h
include/entities/algebra/: affine_transform.h  matrix.h  point.h  vec.h  vector_utils.h
include/entities/color/: color_utils.h  rgb.h
include/entities/model_objects/: i_light_source.h  i_object.h  material.h  materials.h  objects.h  polygonal_object.h  sphere.h
include/entities/textures/: i_monochrome_texture.h  i_rgb_texture.h  i_texture.h  texture_map_loader.cpp  texture_map_loader.h
include/enviroment/: enviroment.h
include/scene/: model.h  scene3d.h  viewport.h
include/utils/: obj_file_handler.cpp  obj_file_handler.h  obj_parser.cpp  obj_parser.h
lib/tga/: tga.hpp
math_lib/: CMakeLists.txt
math_lib/include/: affine_transform.h  matrix.h  vec.h  vector_utils.h
render/: CMakeLists.txt
render/include/: abstract_image.h  brdf.h  color_utils.h  cook_torrance.h  i_monochrome_texture.h  i_object.h  i_rgb_texture.h  kernel.h  material.h  model.h  polygonal_object.h  render.h  render_options.h  scene.h  scene3d.h  sphere.h  texture.h  texture_map_loader.h  viewport.h
render/include/objects/: i_object.h  light.h  obj_file_handler.h  polygonal_object.h  sphere.h
render/include/textures/: i_rgb_texture.h  texture.h  texture_map_loader.h
render/src/: brdf.cpp  i_monochrome_texture.cpp  kernel.cpp  model.cpp  obj_file_handler.cpp  polygonal_object.cpp  render.cpp  scene.cpp  scene3d.cpp  texture_map_loader.cpp  viewport.cpp
sources/algorithms/: brdf.cpp  kernel.cpp
sources/color/: rgb.cpp
sources/entities/: affine_transform.cpp  matrix.cpp  point.cpp  vec.cpp  vector_utils.cpp
sources/entities/algebra/: affine_transform.cpp  matrix.cpp  vec.cpp  vector_utils.cpp
sources/scene/: model.cpp  scene3d.cpp  viewport.cpp
ui/: CMakeLists.txt
ui/include/: cli_exception.h  command.h  command_handler.h
ui/src/: command.cpp
