CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(GlassyRender)
SET(CMAKE_CXX_STANDARD 17)
SET(Boost_COMPILER "-mgw10")
SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_MULTITHREADED ON)
SET(Boost_USE_STATIC_RUNTIME OFF)
SET(${BUILD_SHARED_LIBS} OFF)

FIND_PACKAGE(OPENGL REQUIRED COMPONENTs OPENGL)

ADD_SUBDIRECTORY(common_lib)
ADD_SUBDIRECTORY(render)
ADD_SUBDIRECTORY(ui)
ADD_SUBDIRECTORY(filesystem)

ADD_EXECUTABLE(GlassyRender main.cpp)

TARGET_LINK_LIBRARIES(GlassyRender UI RENDER FILESYSTEM COMMON_LIB)

TARGET_LINK_LIBRARIES(GlassyRender ${OPENGL_LIBRARIES})
IF (${CMAKE_BUILD_TYPE} STREQUAL Release)
    TARGET_COMPILE_OPTIONS(GlassyRender PRIVATE -Ofast)
ENDIF ()
