CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(GlassyRender)
OPTION(INSTALL_LOCAL "Instal into build folder?" ON)
SET(CMAKE_CXX_STANDARD 17)
SET(Boost_COMPILER "-mgw10")
SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_MULTITHREADED ON)
SET(Boost_USE_STATIC_RUNTIME OFF)
SET(BUILD_SHARED_LIBS OFF)
SET(SKIP_INSTALL_ALL ON)

FIND_PACKAGE(OPENGL REQUIRED COMPONENTs OPENGL)

ADD_SUBDIRECTORY(common_lib)
ADD_SUBDIRECTORY(render)
ADD_SUBDIRECTORY(ui)
ADD_SUBDIRECTORY(filesystem)

ADD_EXECUTABLE(GlassyRender main.cpp GlassyRender.rc)

TARGET_LINK_LIBRARIES(GlassyRender UI RENDER FILESYSTEM COMMON_LIB)

TARGET_LINK_LIBRARIES(GlassyRender ${OPENGL_LIBRARIES})
IF (${CMAKE_BUILD_TYPE} STREQUAL Release)
    TARGET_COMPILE_OPTIONS(GlassyRender PRIVATE -Ofast)
ENDIF ()

IF (${INSTALL_LOCAL})
    SET(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/GlassyRender)
ENDIF()

FILE(GLOB DYNAMIC_LIBS lib/**.dll)
FILE(REMOVE_RECURSE ${CMAKE_INSTALL_PREFIX}/)
INSTALL(TARGETS GlassyRender CONFIGURATIONS ${CMAKE_BUILD_TYPE} RUNTIME DESTINATION /)
INSTALL(FILES ${DYNAMIC_LIBS} DESTINATION /)
INSTALL(DIRECTORY resources DESTINATION /)