CMAKE_MINIMUM_REQUIRED(VERSION 3.15.3)

PROJECT(CLI VERSION 1.0 LANGUAGES CXX)

ADD_LIBRARY(CLI STATIC)

FILE(GLOB CLI_SOURCES src/**.cpp)
TARGET_SOURCES(CLI PRIVATE ${CLI_SOURCES})

TARGET_INCLUDE_DIRECTORIES(CLI PUBLIC include)
TARGET_COMPILE_FEATURES(CLI INTERFACE cxx_std_17)

TARGET_LINK_LIBRARIES(CLI PRIVATE RENDER FILESYSTEM)