CMAKE_MINIMUM_REQUIRED(VERSION 3.15.3)


PROJECT(COMMON_LIB VERSION 1.0 LANGUAGES CXX)

find_package(Boost 1.62.0)

SET(PNG_SHARED OFF)
SET(PNG_TESTS OFF)
SET(PNG_HARDWARE_OPTIMIZATIONS OFF)
SET(ld-version-script OFF)

ADD_SUBDIRECTORY(ext/lpng1637)
ADD_SUBDIRECTORY(ext/png++-0.2.9)

SET(YAML_CPP_BUILD_CONTRIB OFF)
SET(YAML_CPP_INSTALL OFF)

ADD_SUBDIRECTORY(ext/yaml-cpp)

ADD_LIBRARY(COMMON_LIB INTERFACE)

FILE(GLOB COMMON_LIB_SOURCES src/**.cpp)
TARGET_SOURCES(COMMON_LIB PRIVATE ${COMMON_LIB_SOURCES})

TARGET_INCLUDE_DIRECTORIES(COMMON_LIB INTERFACE include)
TARGET_INCLUDE_DIRECTORIES(COMMON_LIB INTERFACE ext/lpng1637)
TARGET_INCLUDE_DIRECTORIES(COMMON_LIB INTERFACE ${Boost_INCLUDE_DIRS})

TARGET_COMPILE_FEATURES(COMMON_LIB INTERFACE cxx_std_17)

TARGET_LINK_LIBRARIES(COMMON_LIB INTERFACE PNG++)
TARGET_LINK_LIBRARIES(COMMON_LIB INTERFACE MATH_LIB png_static yaml-cpp)
TARGET_LINK_LIBRARIES(COMMON_LIB INTERFACE ${Boost_LIBRARIES})