CMAKE_MINIMUM_REQUIRED(VERSION 3.15.3)


PROJECT(COMMON_LIB VERSION 1.0 LANGUAGES CXX)

find_package(Boost 1.62.0)

ADD_LIBRARY(COMMON_LIB INTERFACE)

FILE(GLOB COMMON_LIB_SOURCES src/**.cpp)
TARGET_SOURCES(COMMON_LIB PRIVATE ${COMMON_LIB_SOURCES})

TARGET_INCLUDE_DIRECTORIES(COMMON_LIB INTERFACE include)
TARGET_INCLUDE_DIRECTORIES(COMMON_LIB INTERFACE ${Boost_INCLUDE_DIRS})

TARGET_COMPILE_FEATURES(COMMON_LIB INTERFACE cxx_std_17)

TARGET_LINK_LIBRARIES(COMMON_LIB INTERFACE ${Boost_LIBRARIES})