CMAKE_MINIMUM_REQUIRED(VERSION 3.15.3)


PROJECT(COMMON_LIB VERSION 1.0 LANGUAGES CXX)

ADD_LIBRARY(COMMON_LIB INTERFACE)

FILE(GLOB COMMON_LIB_SOURCES src/**.cpp)
TARGET_SOURCES(COMMON_LIB PRIVATE ${COMMON_LIB_SOURCES})

TARGET_INCLUDE_DIRECTORIES(COMMON_LIB INTERFACE include)

TARGET_COMPILE_FEATURES(COMMON_LIB INTERFACE cxx_std_17)
