CMAKE_MINIMUM_REQUIRED(VERSION 3.15.3)


PROJECT(FILESYSTEM VERSION 1.0 LANGUAGES CXX)

find_package(Boost 1.62.0)

ADD_LIBRARY(FILESYSTEM STATIC)

FILE(GLOB FILESYSTEM_SOURCES src/**.cpp)
TARGET_SOURCES(FILESYSTEM PRIVATE ${FILESYSTEM_SOURCES})

TARGET_INCLUDE_DIRECTORIES(FILESYSTEM PUBLIC include)
TARGET_INCLUDE_DIRECTORIES(FILESYSTEM PRIVATE ${Boost_INCLUDE_DIRS})
TARGET_COMPILE_FEATURES(FILESYSTEM INTERFACE cxx_std_17)

TARGET_LINK_LIBRARIES(FILESYSTEM PRIVATE MATH_LIB)
TARGET_LINK_LIBRARIES(FILESYSTEM PRIVATE ${Boost_LIBRARIES})