CMAKE_MINIMUM_REQUIRED(VERSION 3.15.3)


PROJECT(RENDER VERSION 1.0 LANGUAGES CXX)

ADD_LIBRARY(RENDER STATIC)

FILE(GLOB RENDER_SOURCES src/**.cpp)
TARGET_SOURCES(RENDER PRIVATE ${RENDER_SOURCES})

TARGET_INCLUDE_DIRECTORIES(RENDER PUBLIC include)
TARGET_COMPILE_FEATURES(RENDER INTERFACE cxx_std_17)

TARGET_LINK_LIBRARIES(RENDER PUBLIC MATH_LIB COMMON_LIB)