CMAKE_MINIMUM_REQUIRED(VERSION 3.15.3)


PROJECT(UI VERSION 1.0 LANGUAGES CXX)

ADD_LIBRARY(UI STATIC)

FILE(GLOB UI_SOURCES src/**.cpp)
TARGET_SOURCES(UI PRIVATE ${UI_SOURCES})

TARGET_INCLUDE_DIRECTORIES(UI PUBLIC include)
TARGET_COMPILE_FEATURES(UI INTERFACE cxx_std_17)

TARGET_LINK_LIBRARIES(UI PRIVATE RENDER FILESYSTEM)